# 3Dscene

./: CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/RGBchannel/: CMakeLists.txt  RGBchannel.cpp
prj.lab/RGBchannel/include/RGBchannel/: RGBchannel.hpp
prj.lab/autocorrection/: CMakeLists.txt  autocorrection.cpp
prj.lab/autocorrection/include/autocorrection/: autocorrection.hpp
prj.lab/colorHistogram/: CMakeLists.txt  colorHistogram.cpp
prj.lab/colorHistogram/include/colorHistogram/: colorHistogram.hpp
prj.lab/colorLines/: CMakeLists.txt  colorLines.cpp
prj.lab/colorLines/include/colorLines/: colorLines.hpp
prj.lab/noise/: CMakeLists.txt  noise.cpp
prj.lab/noise/include/noise/: noise.hpp
prj.test/: CMakeLists.txt  RGBchannel_test.cpp  autocorrection_test.cpp  colorHistogram_test.cpp  colorLines_test.cpp  noise_test.cpp
